--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0", 
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
@@ -18,7 +18,8 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
-    "reactjs-popup": "^2.0.4"
+    "reactjs-popup": "^2.0.4",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
